--- a/.editorconfig
+++ b/.editorconfig
@@ -11,6 +11,10 @@ trim_trailing_whitespace = true
 insert_final_newline = true
 max_line_length = off
 
+# Java files
+[*.java]
+indent_size = 4
+
 # JSON files
 [*.json]
 insert_final_newline = false
