--- a/.editorconfig
+++ b/.editorconfig
@@ -10,6 +10,10 @@ indent_size = 2
 trim_trailing_whitespace = true
 insert_final_newline = true
 
+# Java files
+[*.java]
+indent_size = 4
+
 # JSON files
 [*.json]
 insert_final_newline = false
