--- a/.editorconfig
+++ b/.editorconfig
@@ -6,13 +6,12 @@ root = true
 charset = utf-8
 end_of_line = lf
 indent_style = space
-indent_size = 2
 trim_trailing_whitespace = true
 insert_final_newline = true
 
-# Java files
-[*.java]
-indent_size = 4
+# Yaml files
+[*.{yaml, yml}]
+indent_size = 2
 
 # JSON files
 [*.json]
