--- a/.gitconfig
+++ b/.gitconfig
@@ -12,5 +12,6 @@
   prompt = false
 [core]
   editor = vim
+  autocrlf = input
 [alias]
   lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
