--- a/.gitconfig
+++ b/.gitconfig
@@ -15,3 +15,5 @@
   autocrlf = input
 [alias]
   lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+[http]
+	sslVerify = false
