--- a/.gitconfig
+++ b/.gitconfig
@@ -16,4 +16,6 @@
 [alias]
   lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
 [http]
-	sslVerify = false
+  sslVerify = false
+[init]
+  defaultBranch = main
